Закончил основное 2 задание и доп задание

--- a/Lesson_2_additional_task/index.html
+++ b/Lesson_2_additional_task/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lesson 2</title>
+    <title>Lesson 2 additional task 1</title>
 </head>
 <body>
+    <style>
+        .alert {
+            padding: 10px;
+            border: 1px solid #d6e9c6;
+            border-radius: 2px;
+            color: #3c763d;
+            background-color: #dff0d8;
+        }
+        .alert2 {
+            font-weight: bold;
+        }
+        .alert3 {
+            font-style: italic;
+        }
+    </style>
+
+
     <script src="script.js"></script>
 </body>
 </html>
