--- a/Lesson_2_additional_task/index.html
+++ b/Lesson_2_additional_task/index.html
@@ -9,11 +9,12 @@
 <body>
     <style>
         .alert {
-            padding: 10px;
+            padding: 5px;
             border: 1px solid #d6e9c6;
-            border-radius: 2px;
+            border-radius: 10px;
             color: #3c763d;
             background-color: #dff0d8;
+            display: block;
         }
         .alert2 {
             font-weight: bold;
@@ -22,6 +23,7 @@
             font-style: italic;
         }
     </style>
+
 
 
     <script src="script.js"></script>
