--- a/Lesson_5_additional_task/index.html
+++ b/Lesson_5_additional_task/index.html
@@ -5,6 +5,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style>
+        a#butt {
+        text-align:center;
+        font-size:13px;
+        text-decoration: none;
+        font-weight: 700;
+        padding: 3px 6px;
+        background: #eaeef1;
+        /* display:block; */
+        width:60px;
+        margin: 20px auto;
+        background-image: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,.1));
+        border-radius: 3px;
+        color: rgba(0,0,0,.6);
+        text-shadow: 0 1px 1px rgba(255,255,255,.7);
+        box-shadow: 0 0 0 1px rgba(0,0,0,.2), 0 1px 2px rgba(0,0,0,.2), inset 0 1px 2px rgba(255,255,255,.7);
+        }
+
+        a#butt:hover, a#butt.hover {
+        background: #fff;
+        }
+        a#butt:active, a#butt.active {
+        background: #d0d3d6;
+        background-image: linear-gradient(rgba(0,0,0,.1), rgba(0,0,0,0));
+        box-shadow: inset 0 0 2px rgba(0,0,0,.2), inset 0 2px 5px rgba(0,0,0,.2), 0 1px rgba(255,255,255,.2);
+        }
+    </style>
 </head>
 <body>
     <div class='time'></div>
@@ -12,20 +39,29 @@
     <div class='day'></div>
 
     <div>
+
         <div>
-            <input type="text">
+           <div>Дата 1: </div>
+            <div>
+                <input id="first_date" value="2017-08-14">
+            </div> 
         </div>
 
         <div>
-            <input type="text">
+           <div>Дата 2: </div>
+            <div>
+                <input id="second_date" value="2017-09-17">
+            </div> 
         </div>
 
         <div>
-            <button></button>
+                <div>Посчитать:</div>
+                <button type="button" onclick="checkDate()">ПРОВЕРИТЬ</button>
         </div>
         
          <div>
-            <input type="text" readonly>
+             <div>Результат: </div>
+             <input id="text3" type="text" readonly>
         </div>
                 
     </div>
